<resources>
    <string name="app_name">Onboarding</string>
    <string name="logo_zup">logo</string>
    <string name="onboarding_text">Onboarding</string>
    <string name="hi_text">Olá,</string>
    <string name="txt_default">Zezinho das Bolacha</string>
    <string name="name_txt">\"Nome\"</string>
    <string name="db_email_receive">email@zup.com.br</string>
    <string name="todo">TODO</string>
    <string name="db_text_progress">Seu progresso:</string>
    <string name="db_text_stage_one">Fase 1</string>
    <string name="db_text_stage_two">Fase 2</string>
    <string name="db_text_stage_three">Fase 3</string>
    <string name="db_text_confirm">Confirmar</string>
    <string name="result_label">Resultado:</string>
    <string name="correct_answers_label">Respostas corretas!</string>
    <string name="try_again_label">Tentar novamente</string>
    <string name="send_and_finalize_label">Terminar</string>
    <string name="answer_quiz_label">Responder Quiz</string>
    <string name="signOut">Saindo do App</string>
    <string name="welcome_txt">Seja bem vindo !</string>
    <string name="inform_pod_location_text">Antes de iniciarmos, pode me informar sua POD e localização?</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="project_cnt">Projeto</string>
    <string name="project_hint">Cliente/Projeto</string>
    <string name="pod_txt">POD</string>
    <string name="say_pod_text">Digite…</string>
    <string name="name_zuper_cnt">nome zupper</string>
    <string name="say_here_cnt">digite…</string>
    <string name="continue_home_txt">Bora continuar seu onboarding?</string>
    <string name="cultura_txt">Cultura</string>
    <string name="tecnologia_txt">Tecnologia</string>
    <string name="estrutura_txt">Estrutura</string>
    <string name="location_text">Localização</string>
    <string name="msg_txt_result">Veja mais conteúdos pra ser mestre na nossa cultura Zup!</string>
    <string name="txt_tks_results">Obrigado por responder,</string>
    <string name="txt_quest">Questão 1:</string>
    <string name="txt_quest_main">Qual é a melhor batata?</string>
    <string name="txt_receive_one">Doce</string>
    <string name="txt_receive_two">Recheada</string>
    <string name="txt_receive_three">Frita</string>
    <string name="txt_receive_four">Cozida</string>
    <string name="exit_app_home">sair</string>


    <string-array name="locations_zup">
        <item> DF: Brasília </item>
        <item> MG: Uberlândia</item>
        <item> MG: Belo Horizonte</item>
        <item> SP: Campinas</item>
        <item> SP: São José do Rio Preto </item>
        <item> SP: São Paulo </item>
        <item> SC: Joinville </item>
    </string-array>
    <string-array name="pods_zup">
        <item>Acelera</item>
        <item>Alpha</item>
        <item>Customer Flow</item>
        <item>Extreme</item>
        <item>GoBiz</item>
        <item>High Potential</item>
        <item>Integra</item>
        <item>MetaPod</item>
        <item>MSI</item>
        <item>MVPod</item>
        <item>Next</item>
        <item>No Limits</item>
        <item>RedRocket</item>
        <item>Uai Pod</item>
        <item>Zup Experience</item>
    </string-array>
    <string-array name="project_zup">
        <item> JOSE</item>
        <item> MARIA</item>
        <item> ROBERTO</item>
        <item> ROBERVAL</item>
        <item> GERISCLEITON</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people_text_result">\"Pessoa\"</string>
    <string name="rocket_one_details">foguete_um</string>
    <string name="rocket_two_details">foguete dois</string>
    <string name="radon_gif">imagem contendo uma gif aleatoria</string>
    <string name="score_text_results_one">Você marcou</string>
    <string name="score_number_results">\"000\"</string>
    <string name="score_text_results_two">pontos</string>
    <string name="onboarding_finished_text">Obrigado por completar o onboarding e conte com a gente em toda sua jornada! Att, Time de Employee Experience</string>

</resources>
