<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/thanks_for_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/result_label_margin_top"
        android:text="@string/txt_tks_results"
        android:textColor="@color/white"
        android:textSize="@dimen/question_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/people_for_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_text_result"
        android:textSize="@dimen/question_text_size"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/result_label_margin_top"
        app:layout_constraintTop_toTopOf="@id/thanks_for_result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/score_text_result_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text_results_one"
        android:textSize="@dimen/score_size_text"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/button_send_finalle_results"
        app:layout_constraintTop_toBottomOf="@id/people_for_result"
        app:layout_constraintLeft_toRightOf="@id/score_result"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/score_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_number_results"
        android:textSize="@dimen/score_size_text"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/people_for_result"
        app:layout_constraintLeft_toRightOf="@id/score_text_result_one"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"

        />

    <TextView
        android:id="@+id/score_text_result_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text_results_two"
        android:textSize="@dimen/score_size_text"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/people_for_result"
        app:layout_constraintLeft_toRightOf="@id/score_result"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"

        />

    <ImageView
        android:id="@+id/result_gif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/result_gif_margin_side"
        android:layout_marginRight="@dimen/result_gif_margin_side"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/margin_top_25"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@id/score_text_result_one"
        app:layout_constraintRight_toRightOf="@id/people_for_result"
        app:layout_constraintTop_toBottomOf="@id/score_text_result_one"
        android:contentDescription="@string/radon_gif"
        />

    <TextView
        android:id="@+id/more_info_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_txt_result"
        android:textColor="@android:color/white"
        android:textSize="@dimen/keep_studying_text_size"
        android:gravity="center"
        android:paddingLeft="@dimen/keep_studying_margin_side"
        android:paddingRight="@dimen/keep_studying_margin_side"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintLeft_toLeftOf="@id/result_gif"
        app:layout_constraintRight_toRightOf="@id/result_gif"
        app:layout_constraintTop_toBottomOf="@id/result_gif"
        />


    <Button
        android:id="@+id/button_send_finalle_results"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_button_height"
        android:background="@drawable/common_button_selector"
        android:text="@string/send_and_finalize_label"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="@id/more_info_results"
        app:layout_constraintRight_toRightOf="@id/more_info_results"
        app:layout_constraintTop_toBottomOf="@id/more_info_results"
        />


</androidx.constraintlayout.widget.ConstraintLayout>