<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".view.HomeActivity">

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/progressbar_margin" />

    <ImageView
        android:id="@+id/home_logo_rocket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/startup_logo"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_marginTop="16dp"
        android:text="@string/hi_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_dashboard"
        app:layout_constraintRight_toLeftOf="@id/home_logo_rocket"
        app:layout_constraintTop_toBottomOf="@id/home_logo_rocket" />

    <TextView
        android:id="@+id/home_txt_receive"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/onboarding_margin_top"
        android:layout_marginEnd="10dp"
        android:hint="@string/name_txt"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/text_dashboard"
        app:layout_constraintLeft_toRightOf="@id/home_txt_hello"
        app:layout_constraintTop_toBottomOf="@id/home_logo_rocket" />

    <TextView
        android:id="@+id/home_text_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/continue_home_txt"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_txt_hello" />

    <ImageView
        android:id="@+id/db_rocket_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/rocket_checked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/db_rocket_two"
        app:layout_constraintTop_toBottomOf="@id/home_text_onboarding"
        android:contentDescription="@string/rocket_one_details"
        />

    <ImageView
        android:id="@+id/db_rocket_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/rocket_unchecked"
        app:layout_constraintLeft_toRightOf="@id/db_rocket_one"
        app:layout_constraintRight_toLeftOf="@id/db_rocket_three"
        app:layout_constraintTop_toBottomOf="@id/home_text_onboarding"
        android:contentDescription="@string/rocket_two_details"
        />

    <ImageView
        android:id="@+id/db_rocket_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/rocket_unchecked"
        app:layout_constraintLeft_toRightOf="@id/db_rocket_two"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_text_onboarding"

        />

    <ImageView
        android:id="@+id/db_ball_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ball_default"
        android:background="@drawable/ball_checked"
        app:layout_constraintRight_toLeftOf="@id/db_ball_two"
        app:layout_constraintStart_toStartOf="@+id/db_rocket_one"
        app:layout_constraintTop_toBottomOf="@id/db_rocket_one"
        app:srcCompat="@drawable/ic_check_circle_outline_24px" />

    <ImageView
        android:id="@+id/db_ball_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ball_default"
        android:background="@drawable/ball_unchecked"
        app:layout_constraintEnd_toStartOf="@+id/db_rocket_three"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/db_rocket_two"
        app:layout_constraintTop_toBottomOf="@id/db_rocket_two" />

    <ImageView
        android:id="@+id/db_ball_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ball_default"
        android:background="@drawable/ball_unchecked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/db_rocket_three"
        app:layout_constraintTop_toBottomOf="@id/db_rocket_three" />

    <ImageView
        android:id="@+id/db_line_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_default_top"
        android:background="@drawable/line_unchecked"
        app:layout_constraintEnd_toStartOf="@+id/db_ball_two"
        app:layout_constraintLeft_toRightOf="@id/db_ball_two"
        app:layout_constraintStart_toEndOf="@+id/db_ball_one"
        app:layout_constraintTop_toBottomOf="@+id/db_rocket_one" />

    <ImageView
        android:id="@+id/db_line_grey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_default_top"
        android:background="@drawable/line_unchecked"
        app:layout_constraintEnd_toStartOf="@+id/db_ball_three"
        app:layout_constraintLeft_toRightOf="@id/db_ball_three"
        app:layout_constraintStart_toEndOf="@+id/db_ball_two"
        app:layout_constraintTop_toBottomOf="@id/db_rocket_two" />

    <TextView
        android:id="@+id/home_culture_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_margin_top"
        android:text="@string/cultura_txt"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/db_ball_one"
        app:layout_constraintRight_toRightOf="@id/db_ball_one"
        app:layout_constraintTop_toBottomOf="@+id/db_ball_one"

        />

    <TextView
        android:id="@+id/home_technology_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tecnologia_txt"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/db_ball_two"
        app:layout_constraintRight_toRightOf="@id/db_ball_two"
        app:layout_constraintTop_toBottomOf="@id/db_ball_two" />

    <TextView
        android:id="@+id/home_structure_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_margin_top"
        android:text="@string/estrutura_txt"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/db_ball_three"
        app:layout_constraintRight_toRightOf="@id/db_ball_three"
        app:layout_constraintTop_toBottomOf="@id/db_ball_three"

        />

    <Button
        android:id="@+id/home_confirm_button"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_button_height"
        android:layout_marginTop="@dimen/result_buttons_margin_top"
        android:background="@drawable/common_button_selector"
        android:text="@string/db_text_confirm"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/db_ball_one"
        app:layout_constraintRight_toLeftOf="@+id/db_ball_three"
        app:layout_constraintTop_toBottomOf="@id/db_ball_two" />

    <Button
        android:id="@+id/home_button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@drawable/common_button_selector"
        android:text="@string/exit_app_home"
        app:layout_constraintLeft_toRightOf="@id/db_ball_one"
        app:layout_constraintRight_toLeftOf="@+id/db_ball_three"
        app:layout_constraintTop_toBottomOf="@id/home_confirm_button"

        />

</androidx.constraintlayout.widget.ConstraintLayout>