<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".view.activity.DashboardActivity">


    <ImageView
        android:id="@+id/db_rocket_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/startup_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_default"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rocket_1"
        app:layout_constraintTop_toBottomOf="@id/db_email_receive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margintop_default"

        />

    <TextView
        android:id="@+id/db_txt_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/txt_hi"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_dashboard"
        app:layout_constraintLeft_toRightOf="@id/db_rocket_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/db_txt_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:hint="@string/name_txt"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/text_dashboard"
        android:textColor="@android:color/white"
    />

    <TextView
        android:id="@+id/db_email_receive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/db_email_receive"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/db_rocket_logo"
        app:layout_constraintTop_toBottomOf="@id/db_txt_hi" />
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        />
  
    <TextView
        android:id="@+id/db_text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/db_text_progress"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/db_rocket_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/db_rocket_logo" />

    <ImageView
        android:id="@+id/db_rocket_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/db_rocket_one"
        app:layout_constraintTop_toBottomOf="@id/db_text_progress"
        android:src="@drawable/rocket_1"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toLeftOf="@id/db_rocket_three"

        />

    <ImageView
        android:id="@+id/db_rocket_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toRightOf="@id/db_rocket_two"
        app:layout_constraintTop_toBottomOf="@id/db_text_progress"
        android:src="@drawable/rocket_2"
               
               />

    <TextView
        android:id="@+id/stage_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_text_stage_three"
        android:layout_marginTop="@dimen/margintop_default"
        app:layout_constraintTop_toBottomOf="@id/db_ball_three"
        app:layout_constraintLeft_toLeftOf="@id/db_ball_three"
        android:textColor="@android:color/white"

    <Button
        android:id="@+id/db_continue_button"
        android:layout_width="@dimen/result_buttons_width"
        android:layout_height="@dimen/result_buttons_height"
        android:layout_marginTop="@dimen/result_buttons_margin_top"
        android:background="@drawable/btn_send_and_finalize_selector"
        android:text="@string/db_text_confirm"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@id/progress_container"
        app:layout_constraintRight_toRightOf="@id/progress_container"
        app:layout_constraintTop_toBottomOf="@id/progress_container" />

</androidx.constraintlayout.widget.ConstraintLayout>